--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "mongodb": "^6.8.0",
+    "mongoose": "^8.5.0",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18"
